Atualizar URLs de acordo com o release

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,10 @@ before_install:
 - sudo apt-get install -qqy ncftp curl zip
 
 script:
-- php -l index.php
-- php -l Aplicativo/Bibliotecas/PortugolWebstudio/Codigo.php
+- find . -type f -name "*.php" -exec php -l {} \;
 
 after_success:
+- date +%s > release
 - zip -r release.zip *
 - ncftpput -u "$DEPLOY_FTP_USER" -p "$DEPLOY_FTP_PASS" -P "$DEPLOY_FTP_PORT" "$DEPLOY_FTP_HOST" "$DEPLOY_FTP_PATH" "./release.zip"
 - curl -ks "$DEPLOY_HTTP_CALLBACK"
