--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "debug": "~2.6.3",
     "express": "^4.15.3",
     "fs": "0.0.1-security",
+    "socket.io": "^1.3.5",
     "morgan": "^1.8.2",
-    "pty.js": "github:chjj/pty.js",
+    "pty.js": "git+https://github.com/chjj/pty.js.git",
     "serve-favicon": "^2.4.3",
     "twig": "^0.10.3"
   }
