--- a/package.json
+++ b/package.json
@@ -28,10 +28,11 @@
     "debug": "~2.6.3",
     "express": "^4.15.3",
     "fs": "0.0.1-security",
-    "socket.io": "^1.3.5",
     "morgan": "^1.8.2",
+    "nodemon": "^1.11.0",
     "pty.js": "git+https://github.com/chjj/pty.js.git",
     "serve-favicon": "^2.4.3",
+    "socket.io": "^1.3.5",
     "twig": "^0.10.3"
   }
 }
