--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "IDE online para o Portugol (UNIVALI)",
   "private": true,
   "scripts": {
+    "preinstall" : "pip install pexpect",
     "start": "nodemon ./bin/www --watch ./",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -28,11 +29,10 @@
     "debug": "~2.6.3",
     "express": "^4.15.3",
     "fs": "0.0.1-security",
+    "socket.io": "^1.3.5",
     "morgan": "^1.8.2",
-    "nodemon": "^1.11.0",
     "pty.js": "git+https://github.com/chjj/pty.js.git",
     "serve-favicon": "^2.4.3",
-    "socket.io": "^1.3.5",
     "twig": "^0.10.3"
   }
 }
