--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,15 @@
 language: node_js
 node_js:
-  - "iojs"
-  - "8"
+- iojs
+- '8'
 env:
   global:
-    - STUDIOHOST=dgadelha@sf1.hashbang.sh
+  - STUDIOHOST=dgadelha@sf1.hashbang.sh
 addons:
-  ssh_known_hosts: ${STUDIOHOST}
+  ssh_known_hosts: "${STUDIOHOST}"
 before_install:
+- openssl aes-256-cbc -K $encrypted_79549f35fab0_key -iv $encrypted_79549f35fab0_iv
+  -in webstudio_rsa.enc -out ./.travis/webstudio_rsa -d
 - eval "$(ssh-agent -s)"
 - chmod 600 /tmp/webstudio_rsa
 - ssh-add /tmp/webstudio_rsa
