--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,10 @@ addons:
   ssh_known_hosts: "${STUDIOHOST}"
 before_install:
 - openssl aes-256-cbc -K $encrypted_79549f35fab0_key -iv $encrypted_79549f35fab0_iv
-  -in webstudio_rsa.enc -out ./.travis/webstudio_rsa -d
+  -in ./.travis/webstudio_rsa.enc -out ./.travis/webstudio_rsa -d
 - eval "$(ssh-agent -s)"
-- chmod 600 /tmp/webstudio_rsa
-- ssh-add /tmp/webstudio_rsa
+- chmod 600 ./.travis/webstudio_rsa
+- ssh-add ./.travis/webstudio_rsa
 - chmod u+x ./travis/deploy.sh
 install:
 - yarn install
