--- a/.travis.yml
+++ b/.travis.yml
@@ -12,13 +12,13 @@ before_install:
 - eval "$(ssh-agent -s)"
 - chmod 600 /tmp/webstudio_rsa
 - ssh-add /tmp/webstudio_rsa
-- chmod u+x ./travis/deploy.sh
+- chmod u+x ./.travis/deploy.sh
 install:
 - yarn install
 script:
 - yarn start
 deploy:
   provider: script
-  script: "./travis/deploy.sh"
+  script: "./.travis/deploy.sh"
   on:
     all_branches: true
