--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ env:
   global:
   - STUDIOHOST=dgadelha@sf1.hashbang.sh
 addons:
-  ssh_known_hosts: "${STUDIOHOST}"
+  ssh_known_hosts: "dgadelha@sf1.hashbang.sh"
 before_install:
 - openssl aes-256-cbc -K $encrypted_333052a4aa11_key -iv $encrypted_333052a4aa11_iv
   -in ./.travis/webstudio_rsa.enc -out /tmp/webstudio_rsa -d
@@ -14,9 +14,9 @@ before_install:
 - ssh-add /tmp/webstudio_rsa
 - chmod u+x ./.travis/deploy.sh
 install:
-- yarn install
+- npm install
 script:
-- yarn start
+- npm start
 deploy:
   provider: script
   script: "./.travis/deploy.sh"
