--- a/.travis.yml
+++ b/.travis.yml
@@ -13,12 +13,14 @@ before_install:
 - eval "$(ssh-agent -s)"
 - chmod 600 /tmp/webstudio_rsa
 - ssh-add /tmp/webstudio_rsa
-- sudo apt-get update > /dev/null
-- sudo apt-get install python3 python3-setuptools -y > /dev/null
 - chmod u+x ./.travis/deploy.sh
-
+install:
+- npm --version
+script:
+- echo "Hello World"
 deploy:
   provider: script
   script: "./.travis/deploy.sh"
+  skip_cleanup: true
   on:
     all_branches: true
