--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "IDE online para o Portugol (UNIVALI)",
   "private": true,
   "scripts": {
-    "preinstall": "pip3 install pexpect",
-    "start": "nodemon ./bin/www --watch ./",
+    "preinstall": "chmod u+x ./libs/runtime/linux/runtime",
+    "start": "node ./bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -32,10 +32,10 @@
     "debug": "~2.6.3",
     "express": "^4.15.3",
     "fs": "0.0.1-security",
-    "socket.io": "^1.3.5",
     "morgan": "^1.8.2",
     "pty.js": "git+https://github.com/chjj/pty.js.git",
     "serve-favicon": "^2.4.3",
+    "socket.io": "^1.3.5",
     "twig": "^0.10.3"
   }
 }
