--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Recursos"]
-	path = public/recursos
+	path = public/Recursos
 	url = https://github.com/UNIVALI-LITE/Portugol-Studio-Recursos.git
