Adicionado o fs.Realpath e Express Groups como dependência
fs.Realpath = Para realpath síncrono
Express groups = Para isolar a ide

--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "cookie-parser": "^1.4.3",
     "debug": "~2.6.3",
     "express": "^4.15.3",
+    "express-group-routes": "^1.1.0",
     "fs": "0.0.1-security",
+    "fs.realpath": "^1.0.0",
     "morgan": "^1.8.2",
     "pty.js": "git+https://github.com/chjj/pty.js.git",
     "serve-favicon": "^2.4.3",
