--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo 'Procurando erros de sintaxe...' && find . -type f -not -path \"*node_modules*\" -name \"*.js\" -exec node -c {} \\; && mocha -R spec spec.js"
   },
   "repository": {
     "type": "git",
@@ -38,5 +38,10 @@
     "serve-favicon": "^2.4.3",
     "socket.io": "^1.3.5",
     "twig": "^0.10.3"
+  },
+  "devDependencies": {
+    "mocha": "^3.4.2",
+    "really-need": "^1.9.2",
+    "supertest": "^3.0.0"
   }
 }
