--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "postinstall": "node nightwatch.conf.js",
-    "deploy": "now --public --team $NOW_TEAM -e NODE_ENV=production --token $NOW_TOKEN --npm",
+    "deploy": "now --public --team $NOW_TEAM -e NODE_ENV=production --token $NOW_TOKEN --docker",
     "alias": "now --public --team $NOW_TEAM alias --token=$NOW_TOKEN",
     "test": "echo 'Procurando erros de sintaxe...' && find . -type f -not -path \"*node_modules*\" -name \"*.js\" -exec node -c {} \\; && ./node_modules/.bin/nightwatch -e firefox"
   },
