--- a/package.json
+++ b/package.json
@@ -42,9 +42,10 @@
     "fs": "0.0.1-security",
     "fs.realpath": "^1.0.0",
     "morgan": "^1.8.2",
-    "pty.js": "git+https://github.com/chjj/pty.js.git",
+    "node-pty-prebuilt": "^0.7.3",
     "serve-favicon": "^2.4.3",
     "socket.io": "^1.3.5",
+    "strip-ansi": "^4.0.0",
     "twig": "^0.10.3"
   },
   "devDependencies": {
