--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,18 @@
 sudo: required
+dist: trusty
 language: node_js
-dotnet: 2.1.101
 node_js:
 - '8'
 addons:
   sauce_connect:
     username: guiscaranse
     no_ssl_bump_domains: all
+before_install:
+- curl https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > microsoft.gpg
+- sudo mv microsoft.gpg /etc/apt/trusted.gpg.d/microsoft.gpg
+- sudo sh -c 'echo "deb [arch=amd64] https://packages.microsoft.com/repos/microsoft-ubuntu-xenial-prod xenial main" > /etc/apt/sources.list.d/dotnetdev.list'
+- sudo apt-get install apt-transport-https && sudo apt-get update
+- sudo apt-get install dotnet-sdk-2.1.101
 install:
 - npm install
 script:
