--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ before_install:
 - curl https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > microsoft.gpg
 - sudo mv microsoft.gpg /etc/apt/trusted.gpg.d/microsoft.gpg
 - sudo sh -c 'echo "deb [arch=amd64] https://packages.microsoft.com/repos/microsoft-ubuntu-xenial-prod xenial main" > /etc/apt/sources.list.d/dotnetdev.list'
-- sudo apt-get install apt-transport-https && sudo apt-get update
-- sudo apt-get install dotnet-sdk-2.1.101
+- sudo apt-get install apt-transport-https -y && sudo apt-get update
+- sudo apt-get install dotnet-runtime-2.0.6 dotnet-sdk-2.1.101 -y
 install:
 - npm install
 script:
