--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "deploy": "now --public --team $NOW_TEAM -e NODE_ENV=production --token $NOW_TOKEN --docker",
-    "alias": "now --public --team $NOW_TEAM alias --token=$NOW_TOKEN",
+    "alias": "now --public --team $NOW_TEAM --token=$NOW_TOKEN alias",
     "test": "echo 'Procurando erros de sintaxe...' && find . -type f -not -path \"*node_modules*\" -name \"*.js\" -exec node -c {} \\;"
   },
   "repository": {
