--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
   },
   "homepage": "https://github.com/dgadelha/Portugol-Webstudio/Portugol-Webstudio#readme",
   "dependencies": {
+    "adm-zip": "^0.4.11",
     "express": "^4.16.3",
-    "iconv-lite": "^0.4.23",
+    "iconv-lite": "^0.4.24",
     "morgan": "^1.9.0",
     "node-pty-prebuilt": "^0.7.6",
+    "request": "^2.88.0",
     "socket.io": "^2.0.4",
     "strip-ansi": "^4.0.0",
     "twig": "^1.12.0"
