--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "adm-zip": "^0.4.11",
     "express": "^4.16.3",
     "iconv-lite": "^0.4.24",
+    "ini": "^1.3.5",
     "morgan": "^1.9.0",
     "node-pty-prebuilt": "^0.7.6",
     "request": "^2.88.0",
