--- a/package.json
+++ b/package.json
@@ -49,5 +49,7 @@
     "strip-ansi": "^4.0.0",
     "twig": "^1.12.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "eslint": "^5.15.0"
+  }
 }
