--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,7 @@ script:
 - eslint ./*.js ./bin/www
 deploy:
   provider: script
-  script: |
-    echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin && \
-    docker build --pull -t dgadelha/portugol-webstudio:v$TRAVIS_BUILD_NUMBER . && \
-    docker push dgadelha/portugol-webstudio:v$TRAVIS_BUILD_NUMBER
+  script: echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin && docker build --pull -t dgadelha/portugol-webstudio:v$TRAVIS_BUILD_NUMBER . && docker push dgadelha/portugol-webstudio:v$TRAVIS_BUILD_NUMBER
   on:
     branch: master
 env:
