--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portugol-webstudio",
   "version": "1.0.0",
-  "description": "IDE online para o Portugol (UNIVALI)",
+  "description": "IDE online para o Portugol",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
@@ -13,41 +13,30 @@
   },
   "keywords": [
     "portugol",
-    "univali",
     "webstudio"
   ],
-  "author": "Douglas Gadêlha Souza Silva <douglas.gadelha@ifba.edu.br>",
+  "author": "Douglas Gadêlha Souza Silva <dgadelha@live.com>",
   "contributors": [
-    "Guilherme Scaranse de Castro <guilherme.scaranse@ifba.edu.br>"
+    "Guilherme Scaranse de Castro <guiscaranse@gmail.com>"
   ],
   "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/dgadelha/Portugol-Webstudio/issues"
   },
-  "now": {
-    "name": "Portugol-Webstudio",
-    "alias": "portugol-webstudio.now.sh",
-    "public": true,
-    "type": "docker",
-    "version": 1,
-    "features": {
-      "cloud": "v1"
-    }
-  },
-  "homepage": "https://github.com/dgadelha/Portugol-Webstudio/Portugol-Webstudio#readme",
+  "homepage": "https://github.com/dgadelha/Portugol-Webstudio#readme",
   "dependencies": {
     "adm-zip": "^0.4.13",
-    "express": "^4.16.4",
-    "iconv-lite": "^0.4.24",
+    "express": "^4.17.1",
+    "iconv-lite": "^0.5.0",
     "ini": "^1.3.5",
     "morgan": "^1.9.1",
     "node-pty": "^0.9.0-beta27",
     "request": "^2.88.0",
-    "socket.io": "^2.2.0",
+    "socket.io": "^2.3.0",
     "strip-ansi": "^5.2.0",
-    "twig": "^1.13.2"
+    "twig": "^1.13.3"
   },
   "devDependencies": {
-    "eslint": "^5.16.0"
+    "eslint": "^6.5.1"
   }
 }
