--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
     "iconv-lite": "^0.5.0",
     "ini": "^1.3.5",
     "morgan": "^1.9.1",
-    "node-pty": "^0.9.0-beta27",
+    "node-pty": "^0.9.0",
     "request": "^2.88.0",
     "socket.io": "^2.3.0",
     "strip-ansi": "^5.2.0",
     "twig": "^1.13.3"
   },
   "devDependencies": {
-    "eslint": "^6.5.1"
+    "eslint": "^6.6.0"
   }
 }
