--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "IDE online para o Portugol",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "build": "tsc",
+    "dev": "ts-node-dev -T src/index.ts",
+    "start": "node -r source-map-support/register index.js",
     "test": "echo 'Procurando erros de sintaxe...' && find . -type f -not -path \"*node_modules*\" -name \"*.js\" -exec node -c {} \\;"
   },
   "repository": {
@@ -26,17 +28,28 @@
   "homepage": "https://github.com/dgadelha/Portugol-Webstudio#readme",
   "dependencies": {
     "adm-zip": "^0.4.16",
+    "axios": "^0.20.0",
     "express": "^4.17.1",
     "iconv-lite": "^0.6.2",
     "ini": "^1.3.5",
+    "jstree": "^3.3.10",
     "morgan": "^1.10.0",
     "node-pty": "^0.9.0",
     "request": "^2.88.2",
     "socket.io": "^2.3.0",
+    "source-map-support": "^0.5.19",
     "strip-ansi": "^6.0.0",
     "twig": "^1.15.2"
   },
   "devDependencies": {
-    "eslint": "^7.11.0"
+    "@types/adm-zip": "^0.4.33",
+    "@types/express": "^4.17.8",
+    "@types/ini": "^1.3.30",
+    "@types/morgan": "^1.9.1",
+    "@types/node": "^14.11.10",
+    "@types/socket.io": "^2.1.11",
+    "eslint": "^7.11.0",
+    "ts-node-dev": "^1.0.0",
+    "typescript": "^4.0.3"
   }
 }
