--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,19 +1,9 @@
 {
-    "env": {
-        "node": true,
-        "commonjs": true,
-        "es6": true
-    },
-    "extends": "eslint:recommended",
-    "globals": {
-        "Atomics": "readonly",
-        "SharedArrayBuffer": "readonly"
-    },
-    "parserOptions": {
-        "ecmaVersion": 2018
-    },
-    "rules": {
-		"no-console": "off",
-		"no-unused-vars": "off"
-    }
+  "extends": ["@cubos"],
+  "rules": {
+    "@typescript-eslint/naming-convention": "off",
+    "@typescript-eslint/restrict-template-expressions": "off",
+    "no-sync": "off",
+    "no-template-curly-in-string": "off"
+  }
 }
