--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "portugol-webstudio",
   "version": "1.0.0",
   "description": "IDE online para o Portugol",
-  "private": true,
   "scripts": {
     "build": "tsc",
     "dev": "ts-node-dev -T src/index.ts",
     "start": "node -r source-map-support/register index.js",
-    "test": "echo 'Procurando erros de sintaxe...' && find . -type f -not -path \"*node_modules*\" -name \"*.js\" -exec node -c {} \\;"
+    "test": "echo 'Procurando erros de sintaxe...' && find . -type f -not -path \"*node_modules*\" -name \"*.js\" -exec node -c {} \\;",
+    "eslint:fix": "eslint --fix '**/*.{t,j}s'",
+    "eslint:check": "eslint '**/*.{t,j}s'",
+    "prettier:fix": "prettier --write 'src/**/*.{t,j}s'",
+    "prettier:check": "prettier --check 'src/**/*.{t,j}s'"
   },
   "repository": {
     "type": "git",
@@ -42,6 +45,7 @@
     "twig": "^1.15.2"
   },
   "devDependencies": {
+    "@cubos/eslint-config": "^1.0.401456",
     "@types/adm-zip": "^0.4.33",
     "@types/express": "^4.17.8",
     "@types/ini": "^1.3.30",
