--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "portugol",
     "webstudio"
   ],
-  "author": "Douglas Gadêlha Souza Silva <dgadelha@live.com>",
+  "author": "Douglas Gadêlha <dgadelha@live.com>",
   "contributors": [
     "Guilherme Scaranse de Castro <guiscaranse@gmail.com>"
   ],
@@ -29,8 +29,8 @@
   },
   "homepage": "https://github.com/dgadelha/Portugol-Webstudio#readme",
   "dependencies": {
-    "adm-zip": "^0.4.16",
-    "axios": "^0.20.0",
+    "adm-zip": "^0.5.1",
+    "axios": "^0.21.0",
     "express": "^4.17.1",
     "iconv-lite": "^0.6.2",
     "ini": "^1.3.5",
@@ -38,21 +38,20 @@
     "morgan": "^1.10.0",
     "node-pty": "^0.9.0",
     "request": "^2.88.2",
-    "socket.io": "^2.3.0",
+    "socket.io": "^3.0.3",
     "source-map-support": "^0.5.19",
     "strip-ansi": "^6.0.0",
-    "twig": "^1.15.2"
+    "twig": "^1.15.4"
   },
   "devDependencies": {
-    "@cubos/eslint-config": "^1.0.401456",
+    "@cubos/eslint-config": "^1.0.420111",
     "@types/adm-zip": "^0.4.33",
-    "@types/express": "^4.17.8",
+    "@types/express": "^4.17.9",
     "@types/ini": "^1.3.30",
-    "@types/morgan": "^1.9.1",
-    "@types/node": "^14.11.10",
-    "@types/socket.io": "^2.1.11",
-    "eslint": "^7.11.0",
+    "@types/morgan": "^1.9.2",
+    "@types/node": "^14.14.10",
+    "eslint": "^7.14.0",
     "ts-node-dev": "^1.0.0",
-    "typescript": "^4.0.3"
+    "typescript": "^4.1.2"
   }
 }
