--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "adm-zip": "^0.5.1",
     "axios": "^0.21.0",
+    "ced": "^1.0.0",
     "express": "^4.17.1",
     "iconv-lite": "^0.6.2",
     "ini": "^1.3.6",
