--- a/packages/ide/package.json
+++ b/packages/ide/package.json
@@ -40,6 +40,7 @@
     "@angular/platform-browser-dynamic": "^14.2.5",
     "@angular/router": "^14.2.5",
     "@materia-ui/ngx-monaco-editor": "^6.0.0",
+    "@portugol-webstudio/antlr": "*",
     "@portugol-webstudio/resources": "*",
     "@portugol-webstudio/runner": "*",
     "@portugol-webstudio/runtime": "*",
