--- a/packages/resources/tsconfig.json
+++ b/packages/resources/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "extends": "../../tsconfig.json",
-  "compilerOptions": {
-    "target": "es2018",
-    "module": "commonjs",
-    "lib": ["es2019", "dom"],
-    "strict": true,
-    "esModuleInterop": true
+  "ts-node": {
+    "swc": true,
   },
   "files": ["src/atualizar.ts"]
 }
