--- a/packages/ide/package.json
+++ b/packages/ide/package.json
@@ -29,54 +29,54 @@
     "lint": "ng lint"
   },
   "dependencies": {
-    "@angular/animations": "^16.0.2",
-    "@angular/cdk": "^16.0.1",
-    "@angular/common": "^16.0.2",
-    "@angular/compiler": "^16.0.2",
-    "@angular/core": "^16.0.2",
-    "@angular/fire": "^7.5.0",
-    "@angular/forms": "^16.0.2",
-    "@angular/material": "^16.0.1",
-    "@angular/platform-browser": "^16.0.2",
-    "@angular/platform-browser-dynamic": "^16.0.2",
-    "@angular/router": "^16.0.2",
+    "@angular/animations": "^16.2.0",
+    "@angular/cdk": "^16.2.0",
+    "@angular/common": "^16.2.0",
+    "@angular/compiler": "^16.2.0",
+    "@angular/core": "^16.2.0",
+    "@angular/fire": "^7.6.1",
+    "@angular/forms": "^16.2.0",
+    "@angular/material": "^16.2.0",
+    "@angular/platform-browser": "^16.2.0",
+    "@angular/platform-browser-dynamic": "^16.2.0",
+    "@angular/router": "^16.2.0",
     "@materia-ui/ngx-monaco-editor": "^6.0.0",
     "@portugol-webstudio/antlr": "*",
     "@portugol-webstudio/resources": "*",
     "@portugol-webstudio/runner": "*",
     "@portugol-webstudio/runtime": "*",
-    "@sentry/angular": "^7.52.1",
+    "@sentry/angular-ivy": "^7.62.0",
     "angular-split": "^15.0.0",
     "angular-svg-icon": "^16.0.0",
     "assert": "^2.0.0",
     "file-saver": "^2.0.5",
-    "firebase": "^9.22.0",
-    "monaco-editor": "^0.38.0",
+    "firebase": "^9.23.0",
+    "monaco-editor": "^0.41.0",
     "ng-keyboard-shortcuts": "^13.0.8",
     "ngx-google-analytics": "^14.0.1",
     "rxfire": "^6.0.3",
     "rxjs": "~7.8.1",
     "text-encoding": "^0.7.0",
-    "tslib": "^2.5.2",
+    "tslib": "^2.6.1",
     "util": "^0.12.5",
-    "zone.js": "~0.13.0"
+    "zone.js": "~0.13.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.0.2",
-    "@angular-eslint/builder": "^16.0.2",
-    "@angular-eslint/eslint-plugin": "^16.0.2",
-    "@angular-eslint/eslint-plugin-template": "^16.0.2",
-    "@angular-eslint/schematics": "^16.0.2",
-    "@angular-eslint/template-parser": "^16.0.2",
-    "@angular/cli": "^16.0.2",
-    "@angular/compiler-cli": "^16.0.2",
+    "@angular-devkit/build-angular": "^16.2.0",
+    "@angular-eslint/builder": "^16.1.0",
+    "@angular-eslint/eslint-plugin": "^16.1.0",
+    "@angular-eslint/eslint-plugin-template": "^16.1.0",
+    "@angular-eslint/schematics": "^16.1.0",
+    "@angular-eslint/template-parser": "^16.1.0",
+    "@angular/cli": "^16.2.0",
+    "@angular/compiler-cli": "^16.2.0",
     "@types/file-saver": "^2.0.5",
     "@types/text-encoding": "^0.0.36",
-    "@typescript-eslint/eslint-plugin": "^5.59.6",
-    "@typescript-eslint/parser": "^5.59.6",
+    "@typescript-eslint/eslint-plugin": "^6.3.0",
+    "@typescript-eslint/parser": "^6.3.0",
     "angular-cli-ghpages": "^1.0.6",
-    "eslint": "^8.41.0",
+    "eslint": "^8.46.0",
     "ts-node": "^10.9.1",
-    "typescript": "~5.0.4"
+    "typescript": "~5.1.6"
   }
 }
