--- a/packages/ide/package.json
+++ b/packages/ide/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@portugol-webstudio/ide",
   "version": "0.0.0",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/dgadelha/Portugol-Webstudio.git"
@@ -28,54 +29,54 @@
     "lint": "ng lint"
   },
   "dependencies": {
-    "@angular/animations": "^14.2.5",
-    "@angular/cdk": "^14.2.4",
-    "@angular/common": "^14.2.5",
-    "@angular/compiler": "^14.2.5",
-    "@angular/core": "^14.2.5",
-    "@angular/fire": "^7.4.1",
-    "@angular/forms": "^14.2.5",
-    "@angular/material": "^14.2.4",
-    "@angular/platform-browser": "^14.2.5",
-    "@angular/platform-browser-dynamic": "^14.2.5",
-    "@angular/router": "^14.2.5",
+    "@angular/animations": "^16.2.0",
+    "@angular/cdk": "^16.2.0",
+    "@angular/common": "^16.2.0",
+    "@angular/compiler": "^16.2.0",
+    "@angular/core": "^16.2.0",
+    "@angular/fire": "^7.6.1",
+    "@angular/forms": "^16.2.0",
+    "@angular/material": "^16.2.0",
+    "@angular/platform-browser": "^16.2.0",
+    "@angular/platform-browser-dynamic": "^16.2.0",
+    "@angular/router": "^16.2.0",
     "@materia-ui/ngx-monaco-editor": "^6.0.0",
     "@portugol-webstudio/antlr": "*",
     "@portugol-webstudio/resources": "*",
     "@portugol-webstudio/runner": "*",
     "@portugol-webstudio/runtime": "*",
-    "@sentry/angular": "^7.15.0",
-    "angular-split": "^14.1.0",
-    "angular-svg-icon": "^14.0.0",
+    "@sentry/angular-ivy": "^7.62.0",
+    "angular-split": "^15.0.0",
+    "angular-svg-icon": "^16.0.0",
     "assert": "^2.0.0",
     "file-saver": "^2.0.5",
-    "firebase": "^9.12.0",
-    "monaco-editor": "^0.34.0",
+    "firebase": "^9.23.0",
+    "monaco-editor": "^0.41.0",
     "ng-keyboard-shortcuts": "^13.0.8",
     "ngx-google-analytics": "^14.0.1",
     "rxfire": "^6.0.3",
-    "rxjs": "~7.5.7",
+    "rxjs": "~7.8.1",
     "text-encoding": "^0.7.0",
-    "tslib": "^2.4.0",
-    "util": "^0.12.4",
-    "zone.js": "~0.11.8"
+    "tslib": "^2.6.1",
+    "util": "^0.12.5",
+    "zone.js": "~0.13.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.5",
-    "@angular-eslint/builder": "^14.1.2",
-    "@angular-eslint/eslint-plugin": "^14.1.2",
-    "@angular-eslint/eslint-plugin-template": "^14.1.2",
-    "@angular-eslint/schematics": "^14.1.2",
-    "@angular-eslint/template-parser": "^14.1.2",
-    "@angular/cli": "^14.2.5",
-    "@angular/compiler-cli": "^14.2.5",
+    "@angular-devkit/build-angular": "^16.2.0",
+    "@angular-eslint/builder": "^16.1.0",
+    "@angular-eslint/eslint-plugin": "^16.1.0",
+    "@angular-eslint/eslint-plugin-template": "^16.1.0",
+    "@angular-eslint/schematics": "^16.1.0",
+    "@angular-eslint/template-parser": "^16.1.0",
+    "@angular/cli": "^16.2.0",
+    "@angular/compiler-cli": "^16.2.0",
     "@types/file-saver": "^2.0.5",
     "@types/text-encoding": "^0.0.36",
-    "@typescript-eslint/eslint-plugin": "^5.40.0",
-    "@typescript-eslint/parser": "^5.40.0",
-    "angular-cli-ghpages": "^1.0.3",
-    "eslint": "^8.25.0",
+    "@typescript-eslint/eslint-plugin": "^6.3.0",
+    "@typescript-eslint/parser": "^6.3.0",
+    "angular-cli-ghpages": "^1.0.6",
+    "eslint": "^8.46.0",
     "ts-node": "^10.9.1",
-    "typescript": "~4.8.4"
+    "typescript": "~5.1.6"
   }
 }
