--- a/packages/antlr/package.json
+++ b/packages/antlr/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@portugol-webstudio/antlr",
   "version": "0.0.0",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/dgadelha/Portugol-Webstudio.git"
@@ -41,6 +42,6 @@
   },
   "devDependencies": {
     "antlr4ts-cli": "^0.5.0-alpha.4",
-    "typescript": "~4.8.4"
+    "typescript": "~5.1.6"
   }
 }
