--- a/packages/runner/package.json
+++ b/packages/runner/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@portugol-webstudio/runner",
   "version": "0.0.0",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/dgadelha/Portugol-Webstudio.git"
@@ -36,9 +37,9 @@
     "@portugol-webstudio/antlr": "*",
     "@portugol-webstudio/runtime": "*",
     "antlr4ts": "^0.5.0-alpha.4",
-    "rxjs": "^7.5.7"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "typescript": "~4.8.4"
+    "typescript": "~5.1.6"
   }
 }
