--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
         "@typescript-eslint/no-unsafe-argument": "off",
         "@typescript-eslint/no-unsafe-assignment": "off",
         "@typescript-eslint/no-unsafe-member-access": "off",
+        "@typescript-eslint/no-use-before-define": "off",
         "@typescript-eslint/prefer-for-of": "off",
         "@typescript-eslint/prefer-nullish-coalescing": "off",
         "no-alert": "off",
