--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "eslint:check": "eslint 'packages/**/*.{t,j}s'",
     "start": "lerna run start --scope=@portugol-webstudio/ide",
     "build": "lerna run build",
+    "build:parser": "lerna run build --scope=@portugol-webstudio/parser",
     "build:runner": "lerna run build --scope=@portugol-webstudio/runner",
     "build:runtime": "lerna run build --scope=@portugol-webstudio/runtime",
+    "test:parser": "lerna run test --scope=@portugol-webstudio/parser",
     "release": "lerna run release",
     "postinstall": "patch-package"
   },
