Verificação básica de erros

--- a/packages/ide/package.json
+++ b/packages/ide/package.json
@@ -42,12 +42,14 @@
     "@angular/router": "^16.2.0",
     "@materia-ui/ngx-monaco-editor": "^6.0.0",
     "@portugol-webstudio/antlr": "*",
+    "@portugol-webstudio/parser": "*",
     "@portugol-webstudio/resources": "*",
     "@portugol-webstudio/runner": "*",
     "@portugol-webstudio/runtime": "*",
     "@sentry/angular-ivy": "^7.62.0",
     "angular-split": "^15.0.0",
     "angular-svg-icon": "^16.0.0",
+    "antlr4ts": "^0.5.0-alpha.4",
     "assert": "^2.0.0",
     "file-saver": "^2.0.5",
     "firebase": "^9.23.0",
