--- a/packages/ide/package.json
+++ b/packages/ide/package.json
@@ -23,7 +23,7 @@
   },
   "homepage": "https://github.com/dgadelha/Portugol-Webstudio#readme",
   "scripts": {
-    "start": "ng serve --disable-host-check",
+    "start": "ng serve --disable-host-check --configuration=production",
     "release": "ng build --base-href /Portugol-Webstudio/",
     "watch": "ng build --watch --configuration development",
     "lint": "ng lint"
@@ -55,6 +55,7 @@
     "firebase": "^9.23.0",
     "monaco-editor": "^0.41.0",
     "ng-keyboard-shortcuts": "^13.0.8",
+    "ngx-build-plus": "^16.0.0",
     "ngx-google-analytics": "^14.0.1",
     "rxfire": "^6.0.3",
     "rxjs": "~7.8.1",
