--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
 
       - name: Install dependencies 🔧
         run: |
-          npm ci --also=dev
+          npm ci --include=dev
 
       - name: Build code 🚚
         run: BASE_HTML_PATH=/Portugol-Webstudio/ npm run build
