--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name: Install dependencies 🔧
         run: |
-          npm ci --also=dev
+          npm ci --include=dev
 
       - name: Lint 🚨
         run: npm run eslint:check
