--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint:check": "eslint 'packages/**/*.{t,j}s'",
     "start": "lerna run start --scope=@portugol-webstudio/ide",
     "build": "lerna run build",
+    "build:w": "lerna run --parallel build:w",
     "build:parser": "lerna run build --scope=@portugol-webstudio/parser",
     "build:runner": "lerna run build --scope=@portugol-webstudio/runner",
     "build:runtime": "lerna run build --scope=@portugol-webstudio/runtime",
