--- a/packages/runner/package.json
+++ b/packages/runner/package.json
@@ -31,10 +31,12 @@
     "lib"
   ],
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "build:w": "tsc -w"
   },
   "dependencies": {
     "@portugol-webstudio/antlr": "*",
+    "@portugol-webstudio/parser": "*",
     "@portugol-webstudio/runtime": "*",
     "antlr4ts": "^0.5.0-alpha.4",
     "rxjs": "^7.8.1"
