--- a/packages/runner/package.json
+++ b/packages/runner/package.json
@@ -39,7 +39,7 @@
     "@portugol-webstudio/parser": "*",
     "@portugol-webstudio/runtime": "*",
     "antlr4ts": "^0.5.0-alpha.4",
-    "rxjs": "^7.8.1"
+    "rxjs": "~7.8.1"
   },
   "devDependencies": {
     "typescript": "~5.2.0"
