--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "url": "https://github.com/dgadelha/Portugol-Webstudio/issues"
   },
   "homepage": "https://github.com/dgadelha/Portugol-Webstudio#readme",
+  "packageManager": "npm@10.2.0",
   "scripts": {
     "antlr4ts": "antlr4ts -visitor src/antlr/Portugol.g4",
     "lint": "sherif && npm run eslint:check",
@@ -39,7 +40,7 @@
     "@cubos/eslint-config": "^2.2.0",
     "lerna": "^8.0.0",
     "patch-package": "^8.0.0",
-    "sherif": "^0.5.0"
+    "sherif": "^0.6.1"
   },
   "workspaces": [
     "packages/*"
