--- a/packages/antlr/package.json
+++ b/packages/antlr/package.json
@@ -35,14 +35,15 @@
     "antlr-update:PortugolLexico": "wget https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/master/core/src/main/antlr/PortugolLexico.g4 -O src/PortugolLexico.g4",
     "antlr-update:PortugolLexico:patch": "patch src/PortugolLexico.g4 < src/lexico.patch",
     "antlr-update": "npm run antlr-update:Portugol && npm run antlr-update:PortugolLexico && npm run antlr-update:PortugolLexico:patch",
+    "antlr4ng": "antlr4ng -Dlanguage=TypeScript -visitor src/Portugol.g4",
     "build": "tsc",
     "build:w": "tsc -w"
   },
   "dependencies": {
-    "antlr4ts": "^0.5.0-alpha.4"
+    "antlr4ng": "^3.0.3"
   },
   "devDependencies": {
-    "antlr4ts-cli": "^0.5.0-alpha.4",
+    "antlr4ng-cli": "^2.0.0",
     "typescript": "~5.2.2"
   }
 }
