--- a/angular.json
+++ b/angular.json
@@ -42,7 +42,7 @@
           "builder": "ngx-build-plus:browser",
           "options": {
             "plugin": "~angular-build-plugin.cjs",
-            "allowedCommonJsDependencies": ["antlr4ts", "text-encoding"],
+            "allowedCommonJsDependencies": ["antlr4ng", "text-encoding"],
             "outputPath": "packages/ide/dist",
             "index": "packages/ide/src/index.html",
             "main": "packages/ide/src/main.ts",
@@ -59,6 +59,11 @@
                 "glob": "**/*",
                 "input": "node_modules/@portugol-webstudio/resources/assets",
                 "output": "assets/recursos/"
+              },
+              {
+                "glob": "**/*",
+                "input": "packages/worker/lib/",
+                "output": "assets/portugol-worker/"
               },
               "packages/ide/src/favicon.ico",
               "packages/ide/src/assets"
