--- a/packages/ide/package.json
+++ b/packages/ide/package.json
@@ -49,7 +49,7 @@
     "@sentry/angular-ivy": "^7.91.0",
     "angular-split": "^17.1.1",
     "angular-svg-icon": "^17.0.0",
-    "antlr4ts": "^0.5.0-alpha.4",
+    "antlr4ng": "^3.0.3",
     "assert": "^2.1.0",
     "file-saver": "^2.0.5",
     "firebase": "^10.7.1",
