--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -37,7 +37,7 @@
   "dependencies": {
     "@portugol-webstudio/antlr": "*",
     "@sentry/core": "^7.91.0",
-    "antlr4ts": "^0.5.0-alpha.4"
+    "antlr4ng": "^3.0.3"
   },
   "devDependencies": {
     "typescript": "~5.2.2"
