--- a/packages/ide/package.json
+++ b/packages/ide/package.json
@@ -24,7 +24,7 @@
   "homepage": "https://github.com/dgadelha/Portugol-Webstudio#readme",
   "scripts": {
     "start": "ng serve --disable-host-check",
-    "release": "ng build --base-href /Portugol-Webstudio/",
+    "release": "ng build",
     "watch": "ng build --watch --configuration development",
     "lint": "ng lint"
   },
