--- a/angular.json
+++ b/angular.json
@@ -65,6 +65,11 @@
                 "input": "packages/worker/lib",
                 "output": "assets/portugol-worker/"
               },
+              {
+                "glob": "**/*",
+                "input": "packages/ide/src/public/",
+                "output": "/"
+              },
               "packages/ide/src/favicon.ico",
               "packages/ide/src/assets"
             ],
